add delete middleware
