# internal/api/userservice/routes.go
@@ -1,6 +1,7 @@
 package userservice_api
 
 import (
+	"main/internal/api/authservice"
 	"main/pkg"
 )
 
@@ -9,18 +10,21 @@ type UserServiceRoutes struct {
 	userRegisterController *UserRegisterController
 	userGetInfoController  *UserGetInfoController
 	userDeleteController   *UserDeleteController
+	authMiddleware         *authservice_api.AuthMiddleware
 }
 
 func NewUserServiceRoutes(
 	userRegisterController *UserRegisterController,
 	userGetInfoController *UserGetInfoController,
 	userDeleteController *UserDeleteController,
+	authMiddleware *authservice_api.AuthMiddleware,
 	handler pkg.RequestHandler,
 ) *UserServiceRoutes {
 	return &UserServiceRoutes{
 		userGetInfoController:  userGetInfoController,
 		userRegisterController: userRegisterController,
 		userDeleteController:   userDeleteController,
+		authMiddleware:         authMiddleware,
 		handler:                handler,
 	}
 }
@@ -30,5 +34,7 @@ func (r *UserServiceRoutes) Setup() {
 
 	group.POST("/register", r.userRegisterController.Register)
 	group.GET("/get_info", r.userGetInfoController.GetInfo)
-	group.DELETE("/delete", r.userDeleteController.Delete)
+
+	protected := group.Use(r.authMiddleware.Handler())
+	protected.DELETE("/delete", r.userDeleteController.Delete).Use()
 }
